altered package.json to include the url for where I am going to put it on my host

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "markdown-viewer",
+  "homepage": "https://www.sailview.info/freecodecamp_projects/markdown-viewer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
